// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resetModal snapshot(Draw) 1`] = `
<div
  className="sc-gEvEer fERGhw"
>
  <div
    className="sc-eqUAAy hVybWQ"
  >
    <p
      className="sc-fqkvVR yhFdw"
    >
      Game Result
    </p>
    <p
      className="sc-dcJsrY ffvbGl"
    >
      Draw!
    </p>
    <button
      className="sc-aXZVg mnGHp"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;

exports[`resetModal snapshot(Player 1) 1`] = `
<div
  className="sc-gEvEer fERGhw"
>
  <div
    className="sc-eqUAAy hVybWQ"
  >
    <p
      className="sc-fqkvVR yhFdw"
    >
      Game Result
    </p>
    <p
      className="sc-dcJsrY ffvbGl"
    >
      Player 1 win!
    </p>
    <button
      className="sc-aXZVg mnGHp"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;

exports[`resetModal snapshot(Player 2) 1`] = `
<div
  className="sc-gEvEer fERGhw"
>
  <div
    className="sc-eqUAAy hVybWQ"
  >
    <p
      className="sc-fqkvVR yhFdw"
    >
      Game Result
    </p>
    <p
      className="sc-dcJsrY ffvbGl"
    >
      Player 2 win!
    </p>
    <button
      className="sc-aXZVg mnGHp"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;
